<resources>
    <string name="app_name">My First App</string>
    <string name="back_button_text">Back</string>
    <string name="pg_13">13+</string>
    <string name="story_line_label">Storyline</string>
    <string name="cast_line_label">Cast</string>
    <string name="story_line_text">After the devastating events of Avengers: Infinity War, the
        universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_title">Avengers:\nEnd Game</string>
    <string name="tag_text">Action, Adventure, Fantasy</string>
    <string name="total_reviews">%s Reviews</string>
    <string name="movie_duration">%s MIN</string>
    <string name="pg_rating">%s+</string>

    <!-- Cast -->
    <string name="rober_d_j">Robert Downey Jr.</string>
    <string name="evans_c">Chris Evans</string>
    <string name="rufalo_m">Mark Ruffalo</string>
    <string name="hemsworth_c">Chris Hemsworth</string>
    <string name="movies_list_header">Movies list</string>
    <string name="no_movies_available_text">Please, wait some seconds while we fetching
        movies\n\nMake sure that internet is available</string>

    <!-- No internet -->
    <string name="retry_button">Try again!</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_internet_title">No internet</string>
    <string name="error_dialog_title">Error</string>
    <string name="no_internet_message">There is no internet connection.\nPlease turn internet on
        and try again!</string>
    <string name="bad_request_error_text">Application has sent wrong parameters to the
        server!</string>
    <string name="server_internal_error_text">Something was wrong on the server side</string>
    <string name="server_unavailable_error_text">Server is unavailable now! Please try 
        later</string>
    <string name="not_found_error_text">Server can\'t find requested entity</string>
    <string name="unexpected_error_text">Unexpected error, please contact to @subbotin_d</string>

    <!-- Notification -->
    <string name="channel_name_text">Newest movies</string>
    <string name="channel_description_text">MovieApp newest movies updates</string>

    <!-- Permissions -->
    <string name="permission_not_granted_text">Calendar permission not granted</string>

    <!-- Calendar -->
    <string name="calendar_event_title">Watching Movie Session!</string>
    <string name="calendar_event_location">Home!</string>
    <string name="calendar_event_body">Movie time! I want to watch %s\nSee
        details: %s</string>
</resources>