<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="ru.subbotind.android.academy.myfirstapp.data.Movie" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/details_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_big">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/background"
                imageResource="@{movie.mainImageBackground}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/avengers_background" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/gradient_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_background_gradient" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_back_button"
                android:layout_marginTop="@dimen/spacing_top"
                android:drawableLeft="@drawable/ic_path"
                android:text="@string/back_button_text"
                android:textAllCaps="false"
                android:textColor="@color/medium_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pg_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_very_huge_142"
                android:text="@{movie.pgRating}"
                android:textAppearance="@style/pgStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_button"
                tools:text="13+" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_low"
                android:layout_marginEnd="@dimen/spacing_huge"
                android:text="@{movie.title}"
                android:textAppearance="@style/Header3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pg_rating"
                tools:text="@string/movie_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tag_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@{movie.tags}"
                android:textAppearance="@style/tagStyle"
                app:layout_constraintEnd_toEndOf="@id/movie_title_text"
                app:layout_constraintStart_toStartOf="@id/movie_title_text"
                app:layout_constraintTop_toBottomOf="@id/movie_title_text"
                tools:text="@string/tag_text" />

            <ru.subbotind.android.academy.myratingbar.MyRatingBar
                android:id="@+id/rating_bar"
                movieRating="@{movie.userRating}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_tiny"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tag_text"
                app:mrb_drawableActive="@drawable/ic_active_star_icon"
                app:mrb_drawableEmpty="@drawable/ic_inactive_star_icon"
                app:mrb_isIndicator="true"
                app:mrb_ratingBetweenPadding="@dimen/big_star_spacing"
                tools:mrb_currentRating="4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_reviews_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/review_spacing"
                android:text="@{String.format(@string/total_reviews, String.valueOf(movie.reviewsCount))}"
                android:textAppearance="@style/reviewTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
                app:layout_constraintStart_toEndOf="@id/rating_bar"
                app:layout_constraintTop_toTopOf="@+id/rating_bar"
                tools:text="@string/total_reviews" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/story_line_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_big"
                android:text="@string/story_line_label"
                android:textAppearance="@style/Subtitle2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_reviews_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/story_line_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_marginEnd="@dimen/spacing_huge"
                android:alpha="0.75"
                android:lineSpacingExtra="@dimen/text_spacing_line_extra"
                android:paddingTop="@dimen/spacing_tiny"
                android:paddingBottom="@dimen/spacing_tiny"
                android:text="@{movie.storyLine}"
                android:textAppearance="@style/Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/story_line_label"
                tools:text="@string/story_line_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cast_line_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_big"
                android:text="@string/cast_line_label"
                android:textAppearance="@style/Subtitle2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/story_line_text" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/actor_one_image"
                imageResource="@{movie.cast[0].avatar}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/image_spacing"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toStartOf="@+id/actor_two_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cast_line_label"
                tools:srcCompat="@drawable/robert_d_j" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actor_one_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/personal_data_spacing"
                android:text="@{movie.cast[0].fullName}"
                android:textAppearance="@style/Subtitle2"
                app:layout_constraintEnd_toEndOf="@id/actor_one_image"
                app:layout_constraintStart_toStartOf="@id/actor_one_image"
                app:layout_constraintTop_toBottomOf="@id/actor_one_image"
                tools:text="@string/rober_d_j" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/actor_two_image"
                imageResource="@{movie.cast[1].avatar}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/image_spacing"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toStartOf="@+id/actor_three_image"
                app:layout_constraintStart_toEndOf="@+id/actor_one_image"
                app:layout_constraintTop_toBottomOf="@id/cast_line_label"
                tools:srcCompat="@drawable/evanc_c" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actor_two_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/personal_data_spacing"
                android:text="@{movie.cast[1].fullName}"
                android:textAppearance="@style/Subtitle2"
                app:layout_constraintEnd_toEndOf="@id/actor_two_image"
                app:layout_constraintStart_toStartOf="@id/actor_two_image"
                app:layout_constraintTop_toBottomOf="@id/actor_two_image"
                tools:text="@string/evans_c" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/actor_three_image"
                imageResource="@{movie.cast[2].avatar}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/image_spacing"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toStartOf="@+id/actor_four_image"
                app:layout_constraintStart_toEndOf="@+id/actor_two_image"
                app:layout_constraintTop_toBottomOf="@id/cast_line_label"
                tools:srcCompat="@drawable/rufalo_m" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actor_three_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/personal_data_spacing"
                android:text="@{movie.cast[2].fullName}"
                android:textAppearance="@style/Subtitle2"
                app:layout_constraintEnd_toEndOf="@id/actor_three_image"
                app:layout_constraintStart_toStartOf="@id/actor_three_image"
                app:layout_constraintTop_toBottomOf="@id/actor_three_image"
                tools:text="@string/rufalo_m" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/actor_four_image"
                imageResource="@{movie.cast[3].avatar}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/image_spacing"
                android:layout_marginEnd="@dimen/spacing_huge"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/actor_three_image"
                app:layout_constraintTop_toBottomOf="@id/cast_line_label"
                tools:srcCompat="@drawable/hemsworth_c" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actor_four_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/personal_data_spacing"
                android:text="@{movie.cast[0].fullName}"
                android:textAppearance="@style/Subtitle2"
                app:layout_constraintEnd_toEndOf="@id/actor_four_image"
                app:layout_constraintStart_toStartOf="@id/actor_four_image"
                app:layout_constraintTop_toBottomOf="@id/actor_four_image"
                tools:text="@string/hemsworth_c" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="actor_four_text,actor_three_text,actor_two_text,actor_one_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>